Fix hamburger menu appearing behind other elements

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -17,6 +17,7 @@ nav {
     border-right: 1px solid #dbdbdb;
     flex-direction: column;
     height: 100%;
+    z-index: 150;
 }
 
 /* =========================
@@ -191,6 +192,7 @@ div.hamburger ul {
     width: 100%;
     height: 100%;
     list-style: none;
+    z-index: 200;
 }
 
 div.hamburger li {
